# vulkan_sandbox

./: CMakeLists.txt  LICENSE  README.md  compile_shaders.py
include/: app.h  resources.h  window.h
include/vk/: buffer.h  context.h  device.h  image.h  material.h  pipeline.h  render_pass.h  resource_pack.h  sampler.h  swapchain.h  vertex.h
shaders/source/diffuse/: shader.frag  shader.vert
shaders/spv/diffuse/: frag.spv  vert.spv
src/: app.cpp  main.cpp  resources.cpp
src/vk/: buffer.cpp  context.cpp  device.cpp  image.cpp  material.cpp  pipeline.cpp  render_pass.cpp  resource_pack.cpp  swapchain.cpp
